# astl

./: CMakeLists.txt  README.md  doxygen.conf.in  library.h
.github/workflows/: ci.yml
cmake/: doxygen.cmake  gtest.cmake
core/: CMakeLists.txt
core/doc/: signal.dox
core/gtest/: CMakeLists.txt  test-event.cpp  test-final.cpp  test-multi_final.cpp  test-recursive_event.cpp  test-slot_holder.cpp
core/include/astl/: event.h  final.h  multi_final.h  recursive_event.h  signal.h  slot_holder.h
core/include/astl/core/: event.h  final.h  recursive_event.h  signal.h  signals.h  slot_holder.h
gtests/: CMakeLists.txt
gtests/core/: test-signalslot.h.cpp
include/astl/: main.dox
include/astl/core/: signal.dox  signals.h  slot_holder.h
rlp/: CMakeLists.txt  rlp_platform_checks.cmake
rlp/arch/epoll/: runloop_impl.cpp  runloop_impl.h
rlp/gtest/: CMakeLists.txt  test_runloop.cpp
rlp/include/astl/: runloop.h
rlp/src/: runloop.cpp
src/: CMakeLists.txt
