set(COMPONENT core)

add_library(${COMPONENT} INTERFACE)

target_include_directories(${COMPONENT}
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

target_compile_features(${COMPONENT}
    INTERFACE ${ASTL_INTERFACE_COMPILE_FEATURES}
)

target_compile_options(${COMPONENT}
    INTERFACE ${ASTL_INTERFACE_COMPILE_OPTIONS}
)

include(GNUInstallDirs)
install(TARGETS ${COMPONENT}
    EXPORT ${INSTALL_TARGET_EXPORT}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/astl
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(DIRECTORY ./include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/astl-v${PROJECT_VERSION_MAJOR})

if (ASTL_GTESTS)
    add_subdirectory(gtest)
endif()


